# video-fetcher-bot

./: main.py  pyproject.toml  pytest.ini  requirements.txt
bot/: bot.py
bot/cogs/: download_video.py
downloader/: aioytdl.py  config.py  dl_logger.py  downloader.py
tests/: test_downloader.py  test_postprocessor.py  test_uploader.py  test_worker_pipeline.py
utils/: config.py  logging_utils.py
worker/: config.py  downloader.py  postprocessor.py  postprocessor_pool.py  uploader.py  worker.py  worker_pool.py
