[project]
name = "video-fetcher-bot"
version = "0.1.0"
description = "A simple bot that will run concurrent workers to download videos from various streaming platforms, allowing users to download their favorite videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "orjson>=3.11.8",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=7.4.0",
    "yt-dlp[default]>=2026.3.17",
]
